--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -37,7 +37,7 @@
           <a class="sidebar-menu__link"
              [routerLinkActive]="['sidebar-menu__link--active']"
              [routerLink]="['/settings/verification']">
-            Verification
+            Identity Verification
           </a>
         </li>
         <!-- <li class="sidebar-menu__item">
