--- a/src/assets/scss/components/_hints.scss
+++ b/src/assets/scss/components/_hints.scss
@@ -6,6 +6,8 @@
 	padding: 15px;
 	box-shadow: 0 0 15px #bebebe;
 	background-color: #fff;
+	opacity: 0;
+	pointer-events:none;
 	.wrap-input__message{
 		margin-top: 0;
 		&:not(:last-child){
@@ -23,5 +25,13 @@
 		border-top: 8px solid #fff;
 		border-left: 8px solid transparent;
 		border-right: 8px solid transparent;
+	}
+}
+
+
+.wrap-input__input--error{
+	&~div .input-hint-wrapper{
+		opacity: 1;
+	pointer-events:auto;
 	}
 }
