--- a/src/app/shared/components/dynamic-input/dynamic-input.component.html
+++ b/src/app/shared/components/dynamic-input/dynamic-input.component.html
@@ -14,8 +14,8 @@
       autocomplete="off"
       required
     >
-    <div class="clear-icon" (click)="onClearInput()">
-      x
+    <div class="clear-icon mydpicon icon-mydpremove" (click)="onClearInput()">
+      
     </div>
     <label class="wrap-input__label" for="">Search</label>
     <div class="wrap-input__icon">
