--- a/src/app/shared/components/dynamic-input/dynamic-input.component.scss
+++ b/src/app/shared/components/dynamic-input/dynamic-input.component.scss
@@ -85,7 +85,9 @@ app-balance  perfect-scrollbar > .ps.ps--active-y > .ps__rail-y{
     position: absolute;
     width: 20px;
     height: 20px;
-    top: 10px;
+    top: 12px;
     right: 10px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
   }
