--- a/src/app/funds/transaction-history/transaction-history.component.html
+++ b/src/app/funds/transaction-history/transaction-history.component.html
@@ -247,7 +247,7 @@
           *ngFor="let item of transactionsItems$ | async | paginate: { itemsPerPage: countPerPage, currentPage: currentPage, totalItems: countOfEntries$ | async }"
         >
           <td class="table__cell">
-            {{item.status}}
+            {{constantsService.getTrStatus(item.sourceType, item.status) | translate}}
           </td>
           <td class="table__cell">
             <div class="table__date-time">
@@ -272,7 +272,7 @@
             <span>{{item.amount | roundCurrency: item.currencyName | formatCurrency}}</span>
           </td>
           <td class="table__cell">
-            <span class="txt-green">{{item.sourceType}}</span>
+            <span class="txt-green">{{constantsService.getTrOperationType(item.sourceType, item.status) | translate}}</span>
           </td>
           <td class="table__cell">
             <span>{{item.transactionHash}}</span>
