--- a/src/app/dashboard/components/markets/markets.component.scss
+++ b/src/app/dashboard/components/markets/markets.component.scss
@@ -36,7 +36,23 @@
   }
 }
 
+.markets__thead{
+  @media (max-width: 1200px){
+    padding: 0 14px 0 8px;
+    .shape{
+      svg{
+        margin-bottom: -2px;
+        margin-left: 3px;
+      }
+    }
+  }
+}
 
+.markets__tbody{
+  @media (max-width: 1200px){
+    padding: 6px 14px 6px 8px;
+  }
+}
 .tab-no-active {
   border-bottom: 2px solid transparent;
 }
@@ -71,7 +87,7 @@
 
 .widget__markets-tabs {
   position: fixed;
-  bottom: 60px;
+  bottom: 46px;
   width: 100%;
   z-index: 1000;
 }
@@ -82,6 +98,11 @@
 
     .table__cell {
       z-index: 2;
+      .txt-small{
+        font-size: 10px;
+        line-height: 1.1;
+      }
+
     }
 
     .widget__table-row {
@@ -121,6 +142,7 @@
       .table__cell {
         line-height: 16px;
         white-space: normal;
+
       }
     }
 
