--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -4,6 +4,9 @@
   width: 100%;
   height: 100%;
   padding: 0 28px;
+  @media(max-width: 1200px){
+    padding: 0;
+  }
 }
 
 // TODO: remove border in production
