--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -542,10 +542,10 @@
     display: -ms-flex;
     display: flex;
     height: 100%;
-    height: 60px;
+    height: 46px;
     background-color: #23243F;
     justify-content: space-between;
-    @media (min-width: 600px) {
+    @media (min-width: 1200px) {
       height: 60px;
     }
   }
@@ -583,8 +583,8 @@
   }
 
   &__link-burger {
-    min-width: 64px;
-    max-width: 64px;
+    min-width: 46px;
+    max-width: 46px;
     background-color: $darker-blue;
   }
 
@@ -593,12 +593,12 @@
     display: -ms-flex;
     display: flex;
     flex-grow: 5;
-    overflow-x: scroll;
+    overflow-x: auto;
 
     &-link {
       display: flex;
       flex-direction: column;
-      min-width: 64px;
+      min-width: 46px;
       align-items: center;
       justify-content: center;
       text-decoration: none;
@@ -609,7 +609,7 @@
     }
 
     &-link-img {
-      height: 18px;
+      height: 13px;
     }
 
     &-link-text {
