--- a/src/assets/scss/components/_header-mob.scss
+++ b/src/assets/scss/components/_header-mob.scss
@@ -124,7 +124,7 @@
   display: flex;
   // justify-content: space-between;
   flex-grow: 5;
-  overflow-x: scroll;
+  overflow-x: auto;
 
   &-link {
     display: -webkit-flex;
