--- a/src/assets/scss/components/_tabs.scss
+++ b/src/assets/scss/components/_tabs.scss
@@ -15,7 +15,7 @@
   /*--- modificators end ---*/
   /*--- elements start ---*/
   &__item{
-    padding: 8px 0;
+    padding: 5px 0 7px;
     display: block;
     border: none;
     outline: 0;
