--- a/src/app/settings/verification/verification.component.html
+++ b/src/app/settings/verification/verification.component.html
@@ -1,4 +1,4 @@
-<div class="settings__content id-verification">
+<div class="settings__content id-verification" *ngIf="showComponent">
   <h3 class="title settings__content-title">{{'Identity Verification' | translate}}</h3>
   <div class="subtitle settings__content-subtitle">{{'You should pass identity verification to achive something usefull and important.' | translate}} {{'We dont know what exactly, but we will!' | translate}} {{'For sure.' | translate}}</div>
   <div class="row settings__buttons-row">
