catch iframe redirection

--- a/src/app/popups/kyc-popup/kyc-level1-step-two/kyc-level1-step-two.component.html
+++ b/src/app/popups/kyc-popup/kyc-level1-step-two/kyc-level1-step-two.component.html
@@ -1,1 +1,1 @@
-<iframe width="100%" height="750px" [src]="iframeUrl | safe"></iframe>
+<iframe width="100%" height="750px" #iframe (load)="loadIframe()" [src]="iframeUrl | safe"></iframe>
