--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -492,7 +492,21 @@
     }
   }
   .translate{
-    &__trigger{
+    position: relative;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &:hover {
+      .translate__container {
+        opacity: 1;
+        transform: translateY(0);
+        pointer-events: auto;
+        transition: .3s;
+      }
+    }
+    &__trigger {
       cursor: pointer;
       background: none;
       border: none;
@@ -513,6 +527,22 @@
       opacity: 0;
 
     }
+  }
+
+  .translate__container {
+    position: absolute;
+    cursor: default;
+    top: 100%;
+    padding: 0 12px;
+    right: 0;
+    background-color: #fff;
+    border-radius: 4px;
+    color: #191A39;
+    font-weight: 400;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-20px);
+    transition: .2s;
   }
   /*--- elements end ---*/
 }
