--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -246,8 +246,8 @@
       pointer-events: auto;
     }
     &.success{
-      background-color: #237BEF;
-      border: 1px solid #237BEF;
+      background-color: #549BF9;
+      border: 1px solid #549BF9;
       pointer-events: auto;
       .btn__icon{
         padding-bottom: 3px;
