--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
@@ -162,38 +162,35 @@
               required
               class="wrap-input__input"
               formControlName="email"
-              (blur)="checkEmail()"
-              (input)= "emailInput($event)"
               [ngClass]="{'input--error': !emailForm.get('email').valid && emailForm.get('email').touched}"
             >
             <label class="wrap-input__label" for="">{{'Email' | translate}}</label>
             <div class="wrap-input__line"></div>
             <!--Input error section starts-->
-            <div *ngIf="!emailForm.valid && emailForm.get('email').touched">
-            <span class="wrap-input__message" *ngIf="emailForm.get('email').errors['required'] && emailForm.get('email').touched">
-              {{'Email is required' | translate}}
-            </span>
-              <span class="wrap-input__message" *ngIf="emailForm.get('email').errors['emailInvalid'] && emailForm.get('email').touched && !emailForm.get('email').errors['required'] && !emailForm.get('email').errors['specialCharacter']">
-              {{'Wrong email' | translate}}
-            </span>
+            <div *ngIf="emailForm.get('email').invalid && emailForm.get('email').errors">
+              <span class="wrap-input__message" *ngIf="emailForm.get('email').errors['required'] && emailForm.get('email').touched">
+                {{'Email is required' | translate}}
+              </span>
+                <span class="wrap-input__message" *ngIf="emailForm.get('email').errors['emailInvalid'] && emailForm.get('email').touched && !emailForm.get('email').errors['required'] && !emailForm.get('email').errors['specialCharacter']">
+                {{'Wrong email' | translate}}
+              </span>
               <span class="wrap-input__message" *ngIf="emailForm.get('email').errors['specialCharacter'] && !emailForm.get('email').errors['required']">
-              {{'Email cannot contain special characters except period (.), plus (+), underscore (_) and dash (-)' | translate}}
-            </span>
-            </div>
-            <div *ngIf="emailMessage !== ''">
-               <span class="wrap-input__message">
-              {{emailMessage}}
-            </span>
+                {{'Email cannot contain special characters except period (.), plus (+), underscore (_) and dash (-)' | translate}}
+              </span>
+              <span class="wrap-input__message" *ngIf="emailForm.get('email').errors['emailExists']">
+                {{'Email exists' | translate}}
+              </span>
             </div>
             <!--Input error section ends-->
           </div>
         </div>
 
-        <button class="btn popup__btn" (click)="emailSubmit()" [disabled]="!emailForm.valid && existEmail && emailMessage === ''"
-                [ngClass]="{
-                'popup__btn--active': emailForm.valid && !existEmail && emailMessage === ''
-                }"
-        >{{'Create an account' | translate}}</button>
+        <button class="btn popup__btn"
+                [disabled]="emailForm.get('email').invalid && emailForm.get('email').errors"
+                [ngClass]="{'bg-none': !emailForm.valid, 'popup__btn--active': emailForm.valid}"
+                (click)="emailSubmit()">
+          {{'Create an account' | translate}}
+        </button>
       </form>
 
       <div class="popup__links-wrap">
