--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -10,7 +10,7 @@
       </span>
     </a>
     <span class="widget__dots "></span>
-    <div class="widget__controls">
+    <div class="widget__controls" (click)="remove()">
       <div class="widget__controls-close">
         <svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
