--- a/src/app/static-pages/contacts/contacts.component.html
+++ b/src/app/static-pages/contacts/contacts.component.html
@@ -82,7 +82,7 @@
           <div class="contacts__contacts-wrap">
             <h6 class="subtitle">{{'Contacts' | translate}}</h6>
             <ul class="static-pages__list">
-              <li>{{'Listing Manager' | translate}}</li>
+              <li>{{'Head of Sales' | translate}}</li>
               <p class="static-pages__paragraph contacts__row contacts__row--blue">
                 <svg width="16" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
