--- a/src/app/static-pages/contacts/contacts.component.scss
+++ b/src/app/static-pages/contacts/contacts.component.scss
@@ -1,3 +1,10 @@
 .wrap-input__message {
-  color: #EB5757 !important;
+	color: #EB5757 !important;
+}
+
+
+.contacts{
+	.email{
+		text-transform: lowercase;
+	}
 }
