--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -31,13 +31,13 @@
           </ng-template>
         </ul>
       </div>
-      <div class="row row--jcsb txt-light-grey widget__trading-row-txt">
+      <!-- <div class="row row--jcsb txt-light-grey widget__trading-row-txt">
         <div style="margin-left: auto;">
           {{'Pay no fees:' | translate}}
           <img src="../../assets/img/fire.svg" style="margin: 0 4px;">
           <a href="#">{{'Become VIP' | translate}}</a>
         </div>
-      </div>
+      </div> -->
     </div>
     <div class="widget__trading-form--wr">
       <form class="widget__trading-form" action="" [formGroup]="buyForm">
