--- a/src/assets/scss/components/_input.scss
+++ b/src/assets/scss/components/_input.scss
@@ -63,10 +63,10 @@
 
   &--grey {
     .wrap-input__input {
-      border-color: $grey;
+      border-color: #94C2FF;
 
       ~ .wrap-input__label {
-        color: $grey;
+        color: #fff;
       }
 
       ~ .wrap-input__line {
@@ -307,10 +307,10 @@
 
    &--grey {
     .wrap-input__input {
-      border-color: $grey;
+      border-color: #94C2FF;
 
       ~ .wrap-input__label {
-        color: $grey;
+        color: #fff;
       }
 
       ~ .wrap-input__line {
