--- a/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="currency-pair-info__item" style="min-width: 130px; padding-left: 0;">
-      <div class="currency-pair-info__item-title">{{'24h hight' | translate}}</div>
+      <div class="currency-pair-info__item-title">{{'24h high' | translate}}</div>
       <span class="currency-pair-info__item-value">
         {{currentCurrencyInfo?.rateHigh || 0 | number:'1.0-8' | replaceNumber }}
       </span>
