--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -49,7 +49,7 @@
           <ul class="menu submenu__list">
             <li class="submenu__item">
               <a class="submenu__link" routerLink="/funds/balance">
-                <span class="menu__link-text">{{'Balance' | translate}}</span>
+                <span class="menu__link-text">{{'Balances' | translate}}</span>
               </a>
             </li>
             <li class="submenu__item">
