--- a/src/assets/scss/pages/_footer-pages.scss
+++ b/src/assets/scss/pages/_footer-pages.scss
@@ -73,18 +73,18 @@
 
       &--grey {
         svg {
-          fill: $grey;
+          fill:  rgba(255,255,255,.7);
         }
 
-        color: $grey;
+        color:  rgba(255,255,255,.7);
       }
 
       a {
-        color: $grey;
+        color: rgba(255,255,255,.7);
         text-decoration: none;
 
         &:hover {
-          color: $grey;
+          color:  rgba(255,255,255,.7);
           text-decoration: underline;
         }
       }
@@ -99,6 +99,7 @@
       margin-bottom: 20px;
       .wrap-textarea__textarea{
         min-height: 160px;
+        width: 100%;
         resize: none;
       }
     }
